@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.4.26"
+#define KPPPVERSION "1.4.27"
 #endif
